--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [build-system]
 requires = [
     "setuptools>=61",
-    "wheel", 
+    "wheel",
     "pybind11>=2.10.0",
 ]
 build-backend = "setuptools.build_meta"
@@ -14,12 +14,57 @@ requires-python = ">=3.11"
 dependencies = [
     "jupyter>=1.1.1",
     "numpy>2",
+    "pre-commit>=4.2.0",
     "pybind11>=2.13.6",
+    "pytest>=8.4.1",
+    "pytest-cov",
+    "ruff",
     "torch>=2.7.0",
 ]
 
 [tool.setuptools.packages.find]
 where = ["src"]
+
+# Ruff configuration
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+[tool.ruff.lint]
+select = [
+    "E",  # pycodestyle errors
+    "W",  # pycodestyle warnings
+    "F",  # pyflakes
+    "I",  # isort
+    "B",  # flake8-bugbear
+    "C4", # flake8-comprehensions
+    "UP", # pyupgrade
+]
+ignore = [
+    "E501",  # line too long, handled by ruff format
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
+skip-magic-trailing-comma = false
+line-ending = "auto"
+
+# Pytest configuration
+[tool.pytest.ini_options]
+testpaths = ["tests"]
+python_files = ["test_*.py", "*_test.py"]
+python_functions = ["test_*"]
+addopts = [
+    "--strict-markers",
+    "--cov=radon",
+    "--cov-report=term-missing",
+    "--cov-report=html",
+]
+markers = [
+    "slow: marks tests as slow",
+    "cuda: marks tests that require CUDA",
+]
 
 [[tool.uv.index]]
 name = "pytorch-cu128"
