--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,6 +3,7 @@ requires = [
     "setuptools>=61",
     "wheel",
     "pybind11>=2.10.0",
+    "torch>=2.7.0",
 ]
 build-backend = "setuptools.build_meta"
 
