--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ version = "0.1.0"
 description = "GPU-accelerated array operations using CUDA and pybind11"
 requires-python = ">=3.11"
 dependencies = [
+    "ipython==8.36",
     "jupyter>=1.1.1",
     "numpy>2",
     "pre-commit>=4.2.0",
