--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ requires-python = ">=3.11"
 dependencies = [
     "ipython==8.36",
     "jupyter>=1.1.1",
+    "matplotlib>=3.10.3",
     "numpy>2",
     "pre-commit>=4.2.0",
     "pybind11>=2.13.6",
